--- a/UserFront/pom.xml
+++ b/UserFront/pom.xml
@@ -48,6 +48,8 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
+			<scope>runtime</scope>
+			<version>8.0.21</version>
 		</dependency>
 		
 		<dependency>
