--- a/UserFront/src/main/resources/application.properties
+++ b/UserFront/src/main/resources/application.properties
@@ -5,11 +5,13 @@
 # Set here configurations for the database connection
 
 # Connection url for the database "netgloo_blog"
-spring.datasource.url = jdbc:mysql://localhost:3306/onlinebanking
+spring.datasource.url = jdbc:mysql://localhost:3306/onlinebanking?useSSL=false
+
 
 # Username and secret
-spring.datasource.username = root
-spring.datasource.password = 12345678
+spring.datasource.username=root
+spring.datasource.password=12345678
+spring.datasource.tomcat.max-active=1
 
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle = true
