--- a/UserFront/src/main/resources/application.properties
+++ b/UserFront/src/main/resources/application.properties
@@ -35,3 +35,4 @@ spring.jpa.hibernate.ddl-auto = update
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
+server.port=9999
