--- a/UserFront/src/main/resources/application.properties
+++ b/UserFront/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 # Set here configurations for the database connection
 
 # Connection url for the database "netgloo_blog"
-spring.datasource.url = jdbc:mysql://localhost:3306/onlinebanking?useSSL=false
+spring.datasource.url = jdbc:mysql://localhost:3306/online-banking?useSSL=false
 
 
 # Username and secret
